添加gradle等配置文件

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,17 @@ buildscript {
     }
 }
 
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+        maven { url 'https://jitpack.io' }
+    }
+}
 apply plugin: 'com.rongc.lib'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'org.jetbrains.kotlin.android'
 android {
     compileSdk 33
     defaultConfig {
