--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 module_name=toolbar
-group_id=com.rongc
+group_id=com.github.runnchild
 VERSION_NAME=1.0.0
 android.useAndroidX=true
 kotlin.code.style=official
